src/css/covers.css
section.section-covers {
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 64px;
  padding: 0;
  height: 508px;

  overflow: hidden;
  position: relative;
  background-size: cover;
  background-image: url(../img/covers-bcgrnd.png);
}

@media screen and (min-resolution: 192dpi) {
  .section-covers {
    background-image: url(../img/covers-bcgrnd@2.png);
  }
}

.section-covers.container {
  width: 100%;
}

.covers-list {
  position: absolute;
  right: -800px;
  left: 0;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.cover-item {
  display: flex;
  justify-content: center;
  gap: 20px;
  transform: rotate(16deg);
}

.covers-image {
  width: 282px;
  height: auto;
  flex-shrink: 0;

  animation-name: none;
  animation-duration: 8s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  animation-direction: alternate;

  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.covers-image.animated {
  animation-name: marqueeLine;
}

.covers-image:hover,
.covers-image:focus {
  box-shadow: 0 0 20px #2b4441;
  border: 1px solid #2b4441;
  transform: scale(1.1);
}

@keyframes marqueeLine {
  from {
    transform: translateX(20%);
  }

  to {
    transform: translateX(-130%);
  }
}

@media screen and (min-width: 768px) {
  section.section-covers {
    height: 960px;
    margin-bottom: 96px;
  }

  .covers-list {
    gap: 40px;
  }

  .covers-image {
    width: 544px;
  }
}

@media screen and (min-width: 1440px) {
  section.section-covers {
    margin-bottom: 164px;
  }

  .covers-list {
    gap: 50px;
  }
  @keyframes marqueeLine {
    from {
      transform: translateX(-40%);
    }

    to {
      transform: translateX(-100%);
    }
  }
}

